crates/rome_js_formatter/tests/specs/prettier/js/classes/top-level-super/example.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: example.js

---
# Input
```js
super();

```

# Output
```js
super();

```

# Errors
```
error[SyntaxError]: `super` is only valid inside of a class constructor of a subclass.
  ┌─ example.js:1:1
  │
1 │ super();
  │ ^^^^^


```


